--- a/bravechild/src/HomePage.css
+++ b/bravechild/src/HomePage.css
@@ -1,27 +1,97 @@
 /* Background and Layout */
-.page {
+/*.logo {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     background-size: cover;
     background-position: center;
-    position: relative;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
-}
+} */
 
 /* Dark overlay for readability */
-.overlay {
+/*.overlay {
     background: rgba(0, 0, 0, 0.6);
     padding: 20px;
     border-radius: 10px;
     width: 90%;
     max-width: 600px;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
 
 /* Headings */
-.page h1 {
+/*.page h1 {
     font-size: 3rem;
     margin-bottom: 20px;
+} */
+
+.navbar {
+    background-color: #dcd9d9;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
 }
+
+.navbar-title {
+    display: flex;
+    font-size: 1rem;
+    font-weight: bold;
+    align-items: center;
+}
+
+.navbar-logo img {
+    height: 50px;
+    margin-right: 10px;
+}
+
+.navbar-list ul {
+    margin: 0;
+    padding: 30px;
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+.navbar-list ul li {
+    display: inline;
+    padding: 20px;
+}
+
+.navbar-list ul li a {
+    text-decoration: none;
+    color: black;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.homepage-content {
+    margin-top: 200px;
+    padding: 20px;
+    text-align: left;
+    color: black;
+    display: left;
+}
+
+.homepage-content h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    color: black;
+}
+
+.homepage-content p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    color: black;
+}
+
+
